--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:23-alpine
 WORKDIR /app
 ENV NODE_ENV=development
 COPY package*.json ./
-RUN npm install
+RUN npm install --force
 COPY . .
 EXPOSE 3001
 CMD [ "npm", "start" ]
